kafka2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka2
  name: kafka2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/household-network: "true"
        io.kompose.service: kafka2
    spec:
      containers:
      - env:
        - name: ALLOW_PLAINTEXT_LISTENER
          value: yes
        - name: KAFKA_CFG_ADVERTISED_LISTENERS
          value: PLAINTEXT://kafka2:9092,PLAINTEXT_HOST://kafka2:29092
        - name: KAFKA_CFG_LISTENERS
          value: PLAINTEXT://:9092,PLAINTEXT_HOST://:29092
        - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
          value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
        - name: KAFKA_CFG_ZOOKEEPER_CONNECT
          value: zookeeper:2181
        image: bitnami/kafka:2
        imagePullPolicy: ""
        name: kafka-2
        ports:
        - containerPort: 9092
        - containerPort: 29092
        resources: {}
        volumeMounts:
        - mountPath: /bitnami
          name: kafka-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-data
status: {}
