kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9091
  - name: "29091"
    port: 29091
    targetPort: 29091
  selector:
    io.kompose.service: kafka
status:
  loadBalancer: {}
