kafka2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka2
  name: kafka2
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "29092"
    port: 29092
    targetPort: 29092
  selector:
    io.kompose.service: kafka2
status:
  loadBalancer: {}
