kafka3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka3
  name: kafka3
spec:
  ports:
  - name: "9093"
    port: 9093
    targetPort: 9093
  - name: "29093"
    port: 29093
    targetPort: 9092
  selector:
    io.kompose.service: kafka3
status:
  loadBalancer: {}
